# ActixRecipesWebsite

./: Cargo.toml  README.md
src/: main.rs
src/api/: error.rs  mod.rs  route.rs
static/: index.html  test.html
