[package]
name = "recipes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.2"
actix-web-lab = "0.20.0"
serde = { version = "^1", features = ["derive"] }
tokio = { version = "1.20.0", features = ["macros"]}
sqlx = { version = "0.7", features = [ "runtime-tokio" ] }
env_logger = "0.8"
log = "^0.4"
tera = "1.19.1"
